infra/gitops/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: group-1-prod
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: kbazaar-api
          image: ghcr.io/kbtg-kampus-classnest-se-java/workshop-group-1:dff997910ad8658012531af0ef810efd24f61f7e
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
